# factx-haskell

./: README.md  factx-haskell.cabal
demo/: Demo01.hs
src/FactX/: FactOutput.hs
